<resources>
    <string name="app_name">Mobmon</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Default Profile</string>
    <string name="nav_header_subtitle">Connected</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_title_dashboard">Dashboard</string>
    <string name="menu_title_widgets">Widgets</string>
    <string name="menu_title_profile">Profiles</string>
    <string name="menu_title_settings">Settings</string>
    <string name="menu_title_support">Support</string>
    <string name="menu_title_about">About</string>

    <string name="menu_sub_title_dashboard">Monitor metrics</string>
    <string name="menu_sub_title_widgets">Create new widgets</string>
    <string name="menu_sub_title_profile">Manage profiles</string>
    <string name="menu_sub_title_settings">Preferences</string>
    <string name="menu_sub_title_support">Help &amp; guides</string>
    <string name="menu_sub_title_about">Information</string>

    <!-- CONNECTION SETTINGS STRINGS -->
    <string name="passwordTextField">17cc95b4017d496f82</string>
    <string name="usernameTextField">MSIAfterburner</string>
    <string name="portTextField">34634</string>
    <string name="ipAddressTextField1">127</string>
    <string name="ipAddressTextField2">0</string>
    <string name="ipAddressTextField3">0</string>
    <string name="ipAddressTextField4">1</string>
    <string name="updateIntervalTextField">1000</string>
    <string name="press_connect_to_get_started">Press connect to get started!</string>
    <string name="ip_address">Ip Address</string>
    <string name="port">Port</string>
    <string name="connect">Connect</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="update_interval_ms">Update Interval (ms)</string>
    <string name="connection_settings">Connection Settings</string>
    <!-- END CONNECTION SETTINGS STRINGS -->



    <string name="settings_label_address">IP Address</string>
    <string name="settings_label_username">Username</string>
    <string name="settings_label_password">Password</string>
    <string name="settings_label_interval">Update Interval (ms)</string>
    <string name="settings_button_save">Save</string>
    <string name="installation_guide">Installation Guide</string>
    <string name="created_by">Created By:</string>
    <string name="version_control">Version Control</string>
    <string name="configure">Configure</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="update_profile_name">Update Profile Name</string>
    <string name="default_profile">DEFAULT PROFILE</string>
    <string name="status">Status</string>
</resources>