<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <activity
        android:id="@+id/nav_dashboard"
        android:name="com.example.mobmon.ui.dashboard.DashboardActivity"
        android:label="@string/menu_title_dashboard"
        tools:layout="@layout/activity_dashboard" />

    <activity
        android:id="@+id/nav_widgets"
        android:name="com.example.mobmon.ui.widgets.WidgetsActivity"
        android:label="@string/menu_title_widgets"
        tools:layout="@layout/activity_widgets" />

    <activity
        android:id="@+id/nav_profiles"
        android:name="com.example.mobmon.ui.profiles.ProfilesActivity"
        android:label="@string/menu_title_profile"
        tools:layout="@layout/activity_profiles" />

    <activity
        android:id="@+id/nav_settings"
        android:name="com.example.mobmon.ui.settings.SettingsActivity"
        android:label="@string/menu_title_settings"
        tools:layout="@layout/activity_settings" />

    <activity
        android:id="@+id/nav_support"
        android:name="com.example.mobmon.ui.support.SupportActivity"
        android:label="@string/menu_title_support"
        tools:layout="@layout/activity_support" />

    <activity
        android:id="@+id/nav_about"
        android:name="com.example.mobmon.ui.about.AboutActivity"
        android:label="@string/menu_title_about"
        tools:layout="@layout/activity_about" />

</navigation>