<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="#A0A0A0"
    tools:context=".ui.settings.SettingsActivity">


    <TextView
        android:id="@+id/portTextFieldLabel"
        android:layout_width="260dp"
        android:layout_height="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/port"
        android:textColor="#A0A0A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <Button
        android:id="@+id/connectButton"
        android:layout_width="260dp"
        android:layout_height="39dp"
        android:layout_marginTop="28dp"
        android:text="@string/connect"
        android:textColor="#A0A0A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateIntervalTextField" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectionStatusText">

        <EditText
            android:id="@+id/dot1"
            android:layout_width="7dp"
            android:layout_height="39dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="none"
            android:text="."
            android:textColor="#A0A0A0"
            app:layout_constraintStart_toEndOf="@+id/ipAddressTextField1"
            app:layout_constraintTop_toBottomOf="@+id/ipAddressTextFieldLabel" />

        <EditText
            android:id="@+id/dot2"
            android:layout_width="7dp"
            android:layout_height="39dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="none"
            android:text="."
            android:textColor="#A0A0A0"
            app:layout_constraintStart_toEndOf="@+id/ipAddressTextField2"
            app:layout_constraintTop_toBottomOf="@+id/ipAddressTextFieldLabel" />

        <EditText
            android:id="@+id/dot3"
            android:layout_width="6dp"
            android:layout_height="39dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="none"
            android:text="."
            android:textColor="#A0A0A0"
            app:layout_constraintStart_toEndOf="@+id/ipAddressTextField3"
            app:layout_constraintTop_toBottomOf="@+id/ipAddressTextFieldLabel" />

        <TextView
            android:id="@+id/ipAddressTextFieldLabel"
            android:layout_width="260dp"
            android:layout_height="20dp"
            android:text="@string/ip_address"
            android:textColor="#A0A0A0"
            app:layout_constraintStart_toStartOf="@+id/ipAddressTextField1"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ipAddressTextField1"
            android:layout_width="60dp"
            android:layout_height="39dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="number"
            android:text="@string/ipAddressTextField1"
            android:textColor="#A0A0A0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ipAddressTextFieldLabel" />

        <EditText
            android:id="@+id/ipAddressTextField2"
            android:layout_width="60dp"
            android:layout_height="39dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="number"
            android:text="@string/ipAddressTextField2"
            android:textColor="#A0A0A0"
            app:layout_constraintStart_toEndOf="@+id/dot1"
            app:layout_constraintTop_toBottomOf="@+id/ipAddressTextFieldLabel" />

        <EditText
            android:id="@+id/ipAddressTextField3"
            android:layout_width="60dp"
            android:layout_height="39dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="number"
            android:text="@string/ipAddressTextField3"
            android:textColor="#A0A0A0"
            app:layout_constraintStart_toEndOf="@+id/dot2"
            app:layout_constraintTop_toBottomOf="@+id/ipAddressTextFieldLabel" />

        <EditText
            android:id="@+id/ipAddressTextField4"
            android:layout_width="60dp"
            android:layout_height="39dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="number"
            android:text="@string/ipAddressTextField4"
            android:textColor="#A0A0A0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dot3"
            app:layout_constraintTop_toBottomOf="@+id/ipAddressTextFieldLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/portTextField"
        android:layout_width="260dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/portTextField"
        android:textColor="#A0A0A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/portTextFieldLabel" />

    <EditText
        android:id="@+id/usernameTextField"
        android:layout_width="260dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/usernameTextField"
        android:textColor="#A0A0A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextFieldLabel" />

    <EditText
        android:id="@+id/passwordTextField"
        android:layout_width="260dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/passwordTextField"
        android:textColor="#A0A0A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextFieldLabel" />

    <TextView
        android:id="@+id/usernameTextFieldLabel"
        android:layout_width="260dp"
        android:layout_height="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/username"
        android:textColor="#A0A0A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/portTextField" />

    <TextView
        android:id="@+id/passwordTextFieldLabel"
        android:layout_width="260dp"
        android:layout_height="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/password"
        android:textColor="#A0A0A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextField" />

    <TextView
        android:id="@+id/updateIntervalTextFieldLabel"
        android:layout_width="260dp"
        android:layout_height="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/update_interval_ms"
        android:textColor="#A0A0A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />

    <EditText
        android:id="@+id/updateIntervalTextField"
        android:layout_width="260dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/updateIntervalTextField"
        android:textColor="#A0A0A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateIntervalTextFieldLabel" />

    <TextView
        android:id="@+id/connectionStatusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>