<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="#A0A0A0"
    tools:context=".ui.settings.SettingsFragment">


    <TextView
        android:id="@+id/portTextFieldLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/port"
        android:textColor="#A0A0A0"
        app:layout_constraintStart_toStartOf="@+id/portTextField"
        app:layout_constraintTop_toBottomOf="@+id/space4" />

    <Button
        android:id="@+id/connectButton"
        android:layout_width="260dp"
        android:layout_height="39dp"
        android:text="@string/connect"
        android:textColor="#A0A0A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space8" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="260dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space3">

        <EditText
            android:id="@+id/dot1"
            android:layout_width="7dp"
            android:layout_height="39dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="none"
            android:text="."
            android:textColor="#A0A0A0"
            app:layout_constraintStart_toEndOf="@+id/ipAddressTextField1"
            app:layout_constraintTop_toBottomOf="@+id/ipAddressTextFieldLabel" />

        <EditText
            android:id="@+id/dot2"
            android:layout_width="7dp"
            android:layout_height="39dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="none"
            android:text="."
            android:textColor="#A0A0A0"
            app:layout_constraintStart_toEndOf="@+id/ipAddressTextField2"
            app:layout_constraintTop_toBottomOf="@+id/ipAddressTextFieldLabel" />

        <EditText
            android:id="@+id/dot3"
            android:layout_width="6dp"
            android:layout_height="39dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="none"
            android:text="."
            android:textColor="#A0A0A0"
            app:layout_constraintStart_toEndOf="@+id/ipAddressTextField3"
            app:layout_constraintTop_toBottomOf="@+id/ipAddressTextFieldLabel" />

        <TextView
            android:id="@+id/ipAddressTextFieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_address"
            android:textColor="#A0A0A0"
            app:layout_constraintStart_toStartOf="@+id/ipAddressTextField1"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ipAddressTextField1"
            android:layout_width="60dp"
            android:layout_height="39dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="number"
            android:text="@string/ipAddressTextField1"
            android:textColor="#A0A0A0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ipAddressTextFieldLabel" />

        <EditText
            android:id="@+id/ipAddressTextField2"
            android:layout_width="60dp"
            android:layout_height="39dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="number"
            android:text="@string/ipAddressTextField2"
            android:textColor="#A0A0A0"
            app:layout_constraintStart_toEndOf="@+id/dot1"
            app:layout_constraintTop_toBottomOf="@+id/ipAddressTextFieldLabel" />

        <EditText
            android:id="@+id/ipAddressTextField3"
            android:layout_width="60dp"
            android:layout_height="39dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="number"
            android:text="@string/ipAddressTextField3"
            android:textColor="#A0A0A0"
            app:layout_constraintStart_toEndOf="@+id/dot2"
            app:layout_constraintTop_toBottomOf="@+id/ipAddressTextFieldLabel" />

        <EditText
            android:id="@+id/ipAddressTextField4"
            android:layout_width="60dp"
            android:layout_height="39dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="number"
            android:text="@string/ipAddressTextField4"
            android:textColor="#A0A0A0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dot3"
            app:layout_constraintTop_toBottomOf="@+id/ipAddressTextFieldLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/portTextField"
        android:layout_width="260dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/portTextField"
        android:textColor="#A0A0A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/portTextFieldLabel" />

    <EditText
        android:id="@+id/usernameTextField"
        android:layout_width="260dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/usernameTextField"
        android:textColor="#A0A0A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextFieldLabel" />

    <EditText
        android:id="@+id/passwordTextField"
        android:layout_width="260dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/passwordTextField"
        android:textColor="#A0A0A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextFieldLabel" />

    <TextView
        android:id="@+id/usernameTextFieldLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="#A0A0A0"
        app:layout_constraintStart_toStartOf="@+id/usernameTextField"
        app:layout_constraintTop_toBottomOf="@+id/space5" />

    <TextView
        android:id="@+id/passwordTextFieldLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="#A0A0A0"
        app:layout_constraintStart_toStartOf="@+id/passwordTextField"
        app:layout_constraintTop_toBottomOf="@+id/space6" />

    <TextView
        android:id="@+id/updateIntervalTextFieldLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_interval_ms"
        android:textColor="#A0A0A0"
        app:layout_constraintStart_toStartOf="@+id/updateIntervalTextField"
        app:layout_constraintTop_toBottomOf="@+id/space7" />

    <EditText
        android:id="@+id/updateIntervalTextField"
        android:layout_width="260dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/updateIntervalTextField"
        android:textColor="#A0A0A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateIntervalTextFieldLabel" />

    <TextView
        android:id="@+id/dataTextView"
        android:layout_width="250dp"
        android:layout_height="220dp"
        android:text="@string/press_connect_to_get_started"
        android:textColor="#A0A0A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space9" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space_top" />

    <Space
        android:id="@+id/space_top"
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/space3"
        android:layout_width="2dp"
        android:layout_height="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Space
        android:id="@+id/space4"
        android:layout_width="2dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        tools:layout_editor_absoluteX="204dp" />

    <Space
        android:id="@+id/space5"
        android:layout_width="2dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@+id/portTextField"
        tools:layout_editor_absoluteX="209dp" />

    <Space
        android:id="@+id/space6"
        android:layout_width="2dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextField"
        tools:layout_editor_absoluteX="191dp" />

    <Space
        android:id="@+id/space7"
        android:layout_width="2dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextField"
        tools:layout_editor_absoluteX="180dp" />

    <Space
        android:id="@+id/space8"
        android:layout_width="2dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@+id/updateIntervalTextField"
        tools:layout_editor_absoluteX="188dp" />

    <Space
        android:id="@+id/space9"
        android:layout_width="2dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@+id/connectButton"
        tools:layout_editor_absoluteX="198dp" />

</androidx.constraintlayout.widget.ConstraintLayout>